--- a/mixboard/Properties/Resources.resx
+++ b/mixboard/Properties/Resources.resx
@@ -136,8 +136,8 @@
   <data name="play" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnrestablecer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnrestablecer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logoedicionhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoedicionhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logoedicion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoedicion1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -153,6 +153,9 @@
   </data>
   <data name="btnrojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnrojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logoedicionhover1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logoedicionhover1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logoedicion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoedicion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,17 +175,17 @@
   <data name="btnsinsonido" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnsinsonido1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="btnrestablecer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnrestablecer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="btnrestableceramarillo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnrestableceramarillo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logoedicionhover" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logoedicionhover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ayuda2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ayuda2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="botonsesion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonsesion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnrestablecerOK" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnrestablecerOK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="boton1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\boton1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,11 +193,14 @@
   <data name="btnnaranja" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnnaranja.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="barra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\barra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="botonedicion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\botonedicion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logoedicionhover1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logoedicionhover1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnrestablecerOK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnrestablecerOK.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logoedicionorange" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoedicionorange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,7 +217,7 @@
   <data name="btnamarillo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnamarillo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ayuda2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ayuda2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="mixboardtitulo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mixboardtitulo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
