--- a/Form1.resx
+++ b/Form1.resx
@@ -701,7 +701,10 @@
         +QQFAAB/ACwAAAAAAQABAAAHA4B/gQA7
 </value>
   </data>
+  <metadata name="tmloop.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>369, 16</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>27</value>
+    <value>90</value>
   </metadata>
 </root>
